v3.9.0 (XXXX-XX-XX)
-------------------

* Fix issues during rolling upgrades from 3.8.0 to 3.8.x (x >= 1) and from 3.7.x
  (x <= 12) to 3.8.3. The problem was that older versions did not handle
  following term ids that are sent from newer versions during synchronous
  replication operations.

* Increase default stack size on Windows from 1MB to 4MB. This should allow
  execution of larger queries without overflowing the stack.
  
* Make background calculation of SHA hashes for RocksDB .sst files less
  intrusive. The previous implementation frequently iterated over all files in
  the database directory to check if it needed to ad-hoc calculate the SHA
  hashes for .sst files it previously missed. The procedure it used was to
  iterate over all files in the database directory and check if there were
  matching pairs of .sst files and .sha files. This was expensive, because a
  full directory iteration was performed and a lot of temporary strings were
  created for filenames and used in comparisons. This was especially expensive
  for larger deployments with lots of .sst files.
  The expensive iteration of files in the directory is now happening less
  frequently, and will not be as expensive as before if it runs.

* Close a potential gap during shard synchronization when moving from the
  initial sync step to the WAL tailing step. In this small gap the leader could
  purge some of the WAL files that would be required by the following WAL
  tailing step. This was possible because at the end of the initial sync step,
  the snapshot on the leader is released, and there is a small window of time
  before the follower will issue its first WAL tailing request.

* Improve Shards overview in web UI: the number of currently syncing shards is
  now displayed per collection. Additionally, shards on failed servers are now
  displayed in a different color.

* Fixed BTS-637: Slow SynchronizeShard jobs which need to copy data could block